update the product using console and web interface